# VehicleComputingSimulator

control/: CMakeLists.txt  README.md
control/include/: full_condition.h  global_properties.h  input.h  sensor.h
control/src/: full_condition.cpp  global_properties.cpp  input.cpp  main.cpp  operator_node.cpp  sensor.cpp
control/test/: test_simple_build.cpp
control/test/sensors_data/: camera.json  communication.json  speed.json  tirePressure.json
